# pythonCodeVault

./: LICENSE  README.md  assert.py  clearScreen.py  introspection.py  iterator.py  loops.py  main.py  matplotlib.py  os.py  pyproject.toml  range.py  ternaryOperator.py  truthyOrFalsy.py  unpackingData.py  unpackingFromCollection.py  virtualEnv.txt
Function/: Built-inPureFuntions.py  UserDefineFunction.py  callByValueOrReference.py  decorators.py  generators.py  lambdaExpression.py  pureFunctions.py  scope.py
Input, Output/: input.py  inputProcessing.py  print.py
Lists/: listSort.py  list_functions.py
Modules 3rdParty/: text to speech.py
Modules StandardUtility/: math.py  os.path.py  os.py
NumberFormat/: numbers.py
Programs/: CheckPalindrome.py  areaOfCircle.py  audiblePdf.py  calcualtor_eval.py  calculator.py  checkConnectivity.py  evenOdd.py  fibonacciUsingReduce.py  gussingGame.py  passLength.py  passwordGen.py  pdfExperiment.py  positiveOrNegCheck.py  reverseStringOder.py  sumOfDigits.py  sumSimilar.py  tictactoe.py  weather-Mic-Input.py  weatherreport.py
String/: String.py  String_functions.py
TypeCheck and casting/: type.py
Useful_Built-in_Functions/: Sum.py  help.py  type.py
class/: (constructor)__init__.py  UsefulBuilt-inClassFunctions.py  abstract_class.py  class.py  class_inheritance.py  constructor_calling_from parent_class.py  deletePropertiesOrClass.py  dunderMethods.py  public.private.protected.py  static_method,class_method.py
dictionaries/: dictionary_functions.py
env/: pyvenv.cfg
error/: customError.py  try, exceptBlock.py
(+35 files in other folders)
